run dynamically compiled classes in the main loop